--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@ body {
     position: sticky;
     min-width: 100vw;
 }
-header{
+
+header {
     line-height: 100px;
     vertical-align: 100px;
     position: fixed;
@@ -101,11 +102,38 @@ header{
     padding-top: 20px;
     font-size: 1.5rem;
     padding-top: 110px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
-.sections:last-child{
+
+.sections:last-child {
     margin-top: 100px;
     padding-top: 10px;
 }
-input{
+
+input {
     margin-left: 10px;
+}
+
+.scenary {
+    width: 80%;
+    height: 40%;
+    background-color: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* overflow: hidden; */
+}
+
+.scenary__ball {
+    width: 60px;
+    height: 60px;
+    background-color: yellow;
+    z-index: 1;
+    margin: 10px;
+    border-radius: 50%;
+    transform: translate(0,0);
+    transition: ease-out 1s;
 }
