--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ header {
     background-color: var(--primary-color);
     text-align: center;
     font-size: 1.5rem;
+    z-index: 100;
 }
 
 .nav {
@@ -126,10 +127,6 @@ header {
     padding-top: 20px;
     font-size: 1.5rem;
     padding-top: 110px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
 }
 
 .sections:last-child {
@@ -139,6 +136,7 @@ header {
 
 input {
     margin-left: 10px;
+    padding: 8px;
 }
 
 .scenary {
@@ -149,6 +147,7 @@ input {
     justify-content: center;
     align-items: center;
     /* overflow: hidden; */
+    margin: auto;
 }
 
 .scenary__ball {
@@ -158,10 +157,23 @@ input {
     margin: 10px;
     border-radius: 50%;
     transform: translate(0,0);
-    transition: ease-out 1s;
+    transition: ease-out .4s;
 }
 .cronometro{
     text-wrap: balance;
+}
+.darkMode{
+    background-color: var(--second-color);
+    color: var(--primary-color);
+    left: 0;
+    margin: 25px;
+}
+.darkMode:hover{
+    background-color: rgb(90, 86, 86);
+}
+.darktheme{
+    background-color: var(--second-color);
+    color: var(--primary-color);
 }
 /* @keyframes aparecer{
     from {
