--- a/style.css
+++ b/style.css
@@ -135,6 +135,7 @@ header {
 }
 
 input {
+    width: 200px;
     margin-left: 10px;
     padding: 8px;
 }
@@ -185,3 +186,10 @@ input {
         opacity: 100%;
     }
 } */
+form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
