--- a/style.css
+++ b/style.css
@@ -213,3 +213,27 @@ form{
 .offline{
     background-color: red;
 }
+.galeria{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 40px;
+    padding: 10px;
+}
+.galeria__img{
+    width: 300px;
+    height: 300px;
+    object-position: center;
+    background-color: aquamarine;
+    transition: all 0.3s ease-out;
+}
+.galeria__img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.hide{
+    visibility: hidden;
+    opacity: 0;
+    order: 1;
+}
