--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ header {
     top: 0;
     background-color: var(--primary-color);
     text-align: center;
-    font-size: 1.5rem;
+    /* font-size: 1.5rem; */
     z-index: 10;
 }
 
@@ -214,15 +214,18 @@ form{
     background-color: red;
 }
 .galeria{
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 40px;
     padding: 10px;
+    overflow: auto;
 }
 .galeria__img{
-    width: 300px;
-    height: 300px;
+    width: 250px;
+    height: 250px;
     object-position: center;
     background-color: aquamarine;
     transition: all 0.3s ease-out;
@@ -236,4 +239,56 @@ form{
     visibility: hidden;
     opacity: 0;
     order: 1;
+}
+.slider{
+    position: relative;
+    width: 80%;
+    margin: 1rem auto;
+    text-align: center;
+    border: 1px solid black;
+}
+.slider-slides{
+    position: relative;
+    height: 400px;
+    width: 100%;
+}
+.slider-slide{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.5s ease-in-out;
+}
+.slider-slide img{
+    width: inherit;
+    height: inherit;
+    object-fit: cover;
+    object-position: 50% 100%;
+}
+.slider-slide.active{
+    opacity: 1;
+    visibility: visible;
+}
+.slider-btns{
+    position: absolute;
+    top: 50%;
+    bottom: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    z-index: 1;
+}
+.slider-btns >a{
+    margin: 20px;
+    display: block;
+    width: 4rem;
+    height: 4rem;
+    border: none;
+    text-decoration: none;
+    border-radius: 50%;
+    color: var(--primary-color);
+    transition: all 0.3s ease-out;
 }
