--- a/style.css
+++ b/style.css
@@ -116,8 +116,10 @@ header {
     transition: 0.8s;
 }
 
-.nav__sections:active {
-    transition: ease 10s;
+.active {
+     background-color: var(--primary-color);
+    color: var(--second-color);
+
 }
 
 .sections {
@@ -291,4 +293,42 @@ form{
     border-radius: 50%;
     color: var(--primary-color);
     transition: all 0.3s ease-out;
+}
+#vd{
+    width: 100%;
+    height:auto;
+    object-fit: cover;
+}
+@media (width > 1024px) {
+    body{
+        display: grid;
+        grid-template-columns: 1fr 300px;
+        grid-template-rows: 100px 1fr;
+        grid-template-areas: "head head" "main nav";
+    }
+    header{
+        grid-area: head;
+    }
+    .main{
+        grid-area: main ;
+    }
+    .nav__sct{
+        grid-area: nav;
+        padding: 0;
+        right: 0;
+        top: 100px;
+        left: auto;
+        padding-bottom: 100px;
+        width: 300px;
+    }
+    .nav__menu--bars{
+        display: none;
+    }
+    .nav__sct--show{
+        right: 0;
+        transition: none;
+    }
+    .top{
+        left: 100px;
+    }
 }
